fix: bm25 범위 넓혀서 실험 결과

--- a/code/stage1/bm25.ipynb
+++ b/code/stage1/bm25.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "from rank_bm25 import BM25Okapi\n",
     "import numpy as np\n",
     "import csv\n",
@@ -15,13 +16,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "mecab = Mecab(\"C:\\mecab\\mecab-ko-dic\")\n",
     "def mecab_tokenizer(sent):\n",
     "    return mecab.morphs(sent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "current_directory = os.getcwd()\n",
+    "parent_directory = os.path.dirname(current_directory)\n",
+    "file_path = os.path.join(parent_directory, 'aihub')"
    ]
   },
   {
@@ -33,14 +45,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "doc_id = []\n",
     "corpus = []\n",
     "\n",
-    "with open('./aihub/collection.tsv', 'r', encoding='utf-8') as f:\n",
+    "with open(os.path.join(file_path, 'collection.tsv'), 'r', encoding='utf-8') as f:\n",
     "    for line in f:\n",
     "        parts = line.split('||', 1)\n",
     "        docid = parts[0].strip()\n",
@@ -51,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +72,7 @@
        "(124535, 124535)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +104,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 124535/124535 [02:39<00:00, 782.87it/s] \n"
+      "100%|██████████| 124535/124535 [05:57<00:00, 348.38it/s] \n"
      ]
     }
    ],
@@ -102,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,13 +132,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "questions = {}\n",
     "\n",
-    "with open('./aihub/questions.tsv', 'r', encoding='utf-8') as f:\n",
+    "with open(os.path.join(file_path, 'questions.tsv'), 'r', encoding='utf-8') as f:\n",
     "    for line in f:\n",
     "        parts = line.split('\\t', 1)\n",
     "        qid = parts[0].strip()\n",
@@ -139,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +160,7 @@
        "252689"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,14 +178,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "test_qids = []\n",
     "test_docid = []\n",
     "\n",
-    "with open('./aihub/test/qrels_test.tsv', 'r', encoding='utf-8') as f:\n",
+    "with open(os.path.join(file_path, 'test/qrels_test.tsv'), 'r', encoding='utf-8') as f:\n",
     "    for line in f:\n",
     "        parts = line.split('\\t', 1)\n",
     "        qid = parts[0].strip()\n",
@@ -184,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +205,7 @@
        "(3000, 3000)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,22 +223,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3000/3000 [1:27:53<00:00,  1.76s/it]\n"
+      "  0%|          | 0/3000 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3000/3000 [1:53:11<00:00,  2.26s/it]  \n"
      ]
     }
    ],
    "source": [
     "recall1 = 0\n",
+    "recall2 = 0\n",
     "recall5 = 0\n",
     "recall10 = 0\n",
     "recall20 = 0\n",
+    "recall100 = 0\n",
+    "recall200 = 0\n",
     "\n",
     "\n",
     "for idx, test_qid in tqdm(enumerate(test_qids), total = len(test_qids)):\n",
@@ -241,27 +263,50 @@
     "    for i, idx in enumerate(top_indices):\n",
     "        if i < 1 and answer == doc_id[idx]:\n",
     "            recall1 += 1\n",
+    "            recall2 += 1\n",
     "            recall5 += 1\n",
     "            recall10 += 1\n",
     "            recall20 += 1\n",
+    "            recall100+=1\n",
+    "            recall200+=1\n",
     "            break\n",
+    "        elif i < 2 and answer == doc_id[idx]:\n",
+    "            recall2 += 1\n",
+    "            recall100+=1\n",
+    "            recall200+=1\n",
+    "            recall5 += 1\n",
+    "            recall10 += 1\n",
+    "            recall20 += 1\n",
     "        elif i < 5 and answer == doc_id[idx]:\n",
     "            recall5 += 1\n",
     "            recall10 += 1\n",
     "            recall20 += 1\n",
+    "            recall100+=1\n",
+    "            recall200+=1\n",
     "            break\n",
     "        elif i < 10 and answer == doc_id[idx]:\n",
     "            recall10 += 1\n",
     "            recall20 += 1\n",
+    "            recall100+=1\n",
+    "            recall200+=1\n",
     "            break\n",
     "        elif i < 20 and answer == doc_id[idx]:\n",
     "            recall20 += 1\n",
+    "            recall100+=1\n",
+    "            recall200+=1\n",
+    "            break\n",
+    "        elif i < 100 and answer == doc_id[idx]:\n",
+    "            recall100+=1\n",
+    "            recall200+=1\n",
+    "            break\n",
+    "        elif i < 200 and answer == doc_id[idx]:\n",
+    "            recall200+=1\n",
     "            break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -269,17 +314,23 @@
      "output_type": "stream",
      "text": [
       "0.6346666666666667\n",
+      "0.77\n",
       "0.866\n",
       "0.9033333333333333\n",
-      "0.9396666666666667\n"
+      "0.9396666666666667\n",
+      "0.974\n",
+      "0.974\n"
      ]
     }
    ],
    "source": [
     "print(recall1 / len(test_qids))\n",
+    "print(recall2 / len(test_qids))\n",
     "print(recall5 / len(test_qids))\n",
     "print(recall10 / len(test_qids))\n",
-    "print(recall20 / len(test_qids))"
+    "print(recall20 / len(test_qids))\n",
+    "print(recall100 / len(test_qids))\n",
+    "print(recall200 / len(test_qids))"
    ]
   }
  ],
